# claude-mv

./: CLAUDE.md  README.md  pyproject.toml
docs/: demo-recording.webm
docs/devlog/: claude_2026-03-29-initial.md  claude_2026-03-29-rename-to-claude-mv.md  claude_20260329-rename-back-to-claude-migrate.md
src/claude_migrate/: cli.py  migrate.md
src/claude_mv/: cli.py
