[project]
name = "claude-migrate"
version = "0.1.0"
description = "Copy Claude Code conversation history when moving project directories"
readme = "README.md"
authors = [
    { name = "Faris Hijazi", email = "f.hijazi@dema-holding.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-migrate = "claude_migrate.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
